#130 - show archetype icons in player history
